# NextcloudCollaborationreplit

./: .env.example  .flake8  .replit  >README_UPDATE.md  CI_FIX_IMPROVED_README.md  CLEAN_INSTALL.md  DOCKER_INSTALLATION.md  ESP32C6_Libraries.md  ESP_KONFIGURATION.md  FEHLERBEHEBUNG.md  FEHLERBEHEBUNG_CI.md  FINAL_FIX.sh  FINAL_PROJECT_OVERVIEW.md  GENERALANLEITUNG.md  INSTALLATION.md  INSTALLATIONSANLEITUNG.md  INSTALLATION_ANLEITUNG.md  MANIFEST.in  PROJECT_STATUS.md  README.md  SwissAirDry_ESP32C6_MQTT.ino  SwissAirDry_ESP32C6_XIAO_ColorDisplay.ino  SwissAirDry_ESP8266_RestAPI.ino  SwissAirDry_Wemos_Display_128.ino  SwissAirDry_Wemos_Display_64.ino  SwissAirDry_Wemos_Display_64_backup.ino  SwissAirDry_Wemos_Secondary.ino  __init__.py  build_and_publish_images.sh  ci_fix_log.txt  composer.json  diagnose_system.sh  docker-compose.yml  enhanced_fix_ci_build.py  fix_all_ci_issues.py  fix_all_imports.py  fix_api_errors.sh  fix_ci_build.py  fix_ci_build_report.md  fix_docker_installation.sh  (+30 more)
3 Developing a simple interface-only app/: 2 Write the frontend scripts.md  3 Define links routes and page.md
5 Developing an integration with external provider using Smart Picker/: Tutorial_SmartPicker.md
>api/: Dockerfile.api  Dockerfile.simple  requirements.api.txt  requirements.simple.txt
>mqtt-config/: Dockerfile  update_mqtt_config.sh
>nextcloud/: Dockerfile.daemon  README.md  requirements.txt  test_deck_integration.py
ESP32C6_TEST/: .gitignore  README.md  __init__.py  handle_esp32c6_libraries.py  platformio.ini
api/: requirements.api.txt  requirements.simple.txt
attached_assets/: Pasted--Netzteil--1745335672424.txt  (+39 more)
(+327 files in other folders)
