[build-system]
requires = ["setuptools>=42,<60.0.0", "wheel>=0.37.0", "build>=0.7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "swissairdry", 
    "swissairdry.api", 
    "swissairdry.api.app",
    "swissairdry.api.app.routers",
    "swissairdry.api.app.routes",
    "swissairdry.db",
    "swissairdry.integration",
    "swissairdry.integration.deck",
    "swissairdry.mqtt",
    "swissairdry.nextcloud"
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md", "*.txt", "*.html", "*.css", "*.js"]

[project]
name = "swissairdry"
version = "0.1.0"
description = "SwissAirDry - Eine Anwendung für die Verwaltung von Trocknungsgeräten und Felddienstoperationen"
authors = [
    {name = "Swiss Air Dry Team", email = "info@swissairdry.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
dependencies = [
    "aiofiles>=0.8.0",
    "bcrypt>=3.2.0",
    "bleak>=0.14.0",
    "fastapi>=0.70.0",
    "flake8>=4.0.0",
    "flask>=2.0.0",
    "flask-cors>=3.0.10",
    "flask-sqlalchemy>=2.5.0",
    "jinja2>=3.0.0",
    "markdown>=3.3.0",
    "paho-mqtt>=1.6.0",
    "pandas>=1.3.0",
    "pillow>=9.0.0",
    "psutil>=5.9.0",
    "psycopg2-binary>=2.9.3",
    "pydantic>=1.9.0",
    "pytest>=8.3.5",
    "python-dotenv>=0.19.0",
    "python-multipart>=0.0.5",
    "qrcode>=7.3.0",
    "replit-object-storage>=0.1.3",
    "requests>=2.27.0",
    "setuptools>=42,<60.0.0",
    "sqlalchemy>=1.4.0,<2.0.0",
    "trafilatura>=1.2.0",
    "uvicorn>=0.17.0",
]
